# mulan

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.py
.opencode/skills/mlx/: SKILL.md
.opencode/skills/mlx/reference/: fine-tuning.md  quantization.md
.opencode/skills/python-best-practices/: SKILL.md
assets/: demo.lyrics  lyrics.txt  sample.txt  tags.txt
convert/: convert_heartcodec.py  convert_heartmula.py
src/heartlib_mlx/: __init__.py  profiler.py
src/heartlib_mlx/heartcodec/: __init__.py  configuration_heartcodec.py  modeling_heartcodec.py
src/heartlib_mlx/heartcodec/models/: flow_matching.py  sq_codec.py  transformer.py
src/heartlib_mlx/heartmula/: __init__.py  configuration_heartmula.py  modeling_heartmula.py
src/heartlib_mlx/pipelines/: __init__.py  music_generation.py
tests/: exact_heartlib_pipeline.py
web-ui/: index.html  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  skeuomorphic.css
web-ui/src/components/create/: CreateView.tsx
web-ui/src/components/layout/: Sidebar.tsx
web-ui/src/components/player/: PlayerBar.tsx
web-ui/src/components/workspace/: WorkspacePanel.tsx
web-ui/src/lib/: api.ts  helpers.ts  store.tsx  stream-bus.ts  types.ts
