[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mulan"
version = "0.1.0"
description = "HeartMuLa using MLX"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Léonard C.", email = "leonard@uplg.xyz"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["mlx", "music-generation", "audio", "apple-silicon", "machine-learning"]

dependencies = [
    "mlx>=0.30.6",
    "safetensors>=0.7.0",
    "huggingface-hub>=1.4.1",
    "tokenizers>=0.22.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
    "fastapi>=0.131.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/HeartMuLa/heartlib"
Documentation = "https://heartmula.github.io/"
Repository = "https://github.com/uplg/mulan"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
